syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.systemeventsserver.grpc";
option java_outer_classname = "EventLoggerProto";

package eventlogger;

service EventLogger {
  rpc LogEvent (EventRequest) returns (EventResponse);
}

message EventRequest {
  string timestamp = 1;
  string microserviceName = 2;
  string user = 3;
  string actionType = 4;
  string resourceName = 5;
  string responseType = 6;
}

message EventResponse {
  bool success = 1;
  string message = 2;
}